--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "istanbul": "^1.1.0-alpha.1",
     "mini-css-extract-plugin": "^0.2.0",
-    "mocha": "^2.5.3",
+    "mocha": "^8.1.1",
     "npm-run-all": "^1.4.0",
     "rimraf": "^2.7.1",
     "webpack": "^4.44.1"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --colors --bail --reporter spec test/ --recursive",
-    "test-coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register --colors --reporter dot test/ --recursive",
-    "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --compilers js:babel-core/register --colors --reporter spec test/ --recursive",
+    "test": "mocha --require babel-core/register --colors --bail --reporter spec test/ --recursive",
+    "test-coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --require babel-core/register --colors --reporter dot test/ --recursive",
+    "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --require babel-core/register --colors --reporter spec test/ --recursive",
     "clean-for-build": "rimraf ./build/**/*",
     "build-commonjs-modules": "better-npm-run build-commonjs-modules",
     "build-es6-modules": "better-npm-run build-es6-modules",
