--- a/package.json
+++ b/package.json
@@ -9,33 +9,33 @@
     "webpack": ">=2"
   },
   "dependencies": {
-    "colors": "^1.1.2",
+    "colors": "^1.4.0",
     "fs-extra": "^0.30.0",
-    "minimist": "^1.2.0",
+    "minimist": "^1.2.5",
     "validate-npm-package-name": "^2.2.2"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.2",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "better-npm-run": "0.0.14",
     "chai": "^3.5.0",
     "crlf": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "istanbul": "^1.1.0-alpha.1",
     "mini-css-extract-plugin": "^0.2.0",
-    "mocha": "^2.5.3",
+    "mocha": "^8.1.1",
     "npm-run-all": "^1.4.0",
-    "rimraf": "^2.5.0",
-    "webpack": "^4.1.1"
+    "rimraf": "^2.7.1",
+    "webpack": "^4.44.1"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --colors --bail --reporter spec test/ --recursive",
-    "test-coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register --colors --reporter dot test/ --recursive",
-    "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --compilers js:babel-core/register --colors --reporter spec test/ --recursive",
+    "test": "mocha --require babel-core/register --colors --bail --reporter spec test/ --recursive",
+    "test-coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --require babel-core/register --colors --reporter dot test/ --recursive",
+    "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --require babel-core/register --colors --reporter spec test/ --recursive",
     "clean-for-build": "rimraf ./build/**/*",
     "build-commonjs-modules": "better-npm-run build-commonjs-modules",
     "build-es6-modules": "better-npm-run build-es6-modules",
